# Retail-Store-KPIs-To-insights

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  presentation.html  pyproject.toml  requirements.txt  retails_ml_cheatsheet.html  technical_explainer.html
app/: streamlit_app.py
data/raw/: practical-test-dataset-weekly-kpi.xlsx
docs/: agent_permissions.md  build_status.md  eda_executive_summary.md  eda_summary.md  handoff_brief.md  implementation_plan.md  prd.md  privacy_note.md
eval/: golden_set.yaml
eval/prompts/: v1_narrative.md  v2_narrative.md
eval/reports/: eval_v1.md
notebooks/: EDA.ipynb
screenshots/: CAPTURE_GUIDE.md
src/retails_insight/: __init__.py  anomalies.py  eval.py  judge.py  llm.py  narrative.py  payload.py  tags.py
src/yoobic_insight/: __init__.py  anomalies.py  decomposition.py  eval.py  features.py  judge.py  llm.py  loader.py  narrative.py  payload.py  tags.py
tests/: conftest.py  test_anomalies.py  test_decomposition.py  test_features.py  test_judge.py  test_loader.py  test_narrative.py  test_payload.py  test_tags.py
yoobic_insight/: __init__.py
